# IFJ-project

./: .gitignore  AST.c  CMakeLists.txt  Makefile  README.md  ast.c  ast.h  bad_prog.tl  datatype_t.h  dynamic_string.c  dynamic_string.h  generator.c  generator.h  generator_nastrel.c  input.txt  ok_program.tl  our_error.c  our_error.h  parser.c  parser.h  pokus1.tl  precedence_parser.c  precedence_parser.h  program  rozdeleni  scanner-test  scanner-test.c  scanner.c  scanner.h  structures.c  structures.h  symtab.c  symtab.h  vstup.txt
